Corrigindo bug do overflow do painel

--- a/src/components/Painel.css
+++ b/src/components/Painel.css
@@ -9,6 +9,7 @@
   align-items: flex-end;
   flex-direction: column;
   font-weight: bold;
+  overflow-x: hidden;
 }
 
 .painel .operation {
